# imgui_opencv

./: CMakeLists.txt  README.md  main.cpp
dependencies/GLAD/include/glad/: glad.h
dependencies/GLAD/src/: glad.c
include/: ImFileDialog.h  imgui.h  imgui_impl_opengl3_loader.h  imgui_internal.h
src/: ImFileDialog.cpp  glad.c  imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_tables.cpp  imgui_widgets.cpp  main.cpp  test.cpp
